--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 # DataSource settings: set here your own configurations for the database
 # connection. In this example we have "netgloo_blog" as database name and
 # "root" as username and password.
-spring.datasource.url=jdbc:mysql://${JAVA_DB_HOST}:${JAVA_DB_PORT}/${JAVA_DB_NAME}
+spring.datasource.url=jdbc:mysql://${JAVA_DB_HOST}:${JAVA_DB_PORT}/${JAVA_DB_NAME}?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=${JAVA_DB_USER}
 spring.datasource.password=${JAVA_DB_PWD}
-
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
